Fix background image stretching issue

--- a/styles.css
+++ b/styles.css
@@ -42,16 +42,13 @@ div {
     transform-origin: bottom left;
   }
 
-.main {
+body {
     width: 100%;
-    height: 33%;
-}
-
-.main_bg {
-    position: absolute;
-    top: 0;
-    left: 0;
-    z-index: -1;
+    height: 100%;
+    background-image: url("images/bg.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
 }
 
 .main_content {
